--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Miniport by HTML5 UP</title>
+		<title>Ahmed_Emad_Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -217,4 +217,5 @@ document.addEventListener("DOMContentLoaded", function() {
 </script>
 
 	</body>
+
 </html>
